# pi86

./: README.md
Kicad/Single Int/: Single Chip-cache.lib  Single Chip.kicad_pcb  Single Chip.kicad_pcb-bak  Single Chip.kicad_prl  Single Chip.kicad_pro  Single Chip.kicad_sch  Single Chip.net  Single Chip.pro  Single Chip.sch  Single Chip.sch-bak  _autosave-Single Chip.sch  fp-info-cache
Kicad/Single Int/Gerber/: Single Chip-B_Cu.gbr  Single Chip-B_Mask.gbr  Single Chip-B_Paste.gbr  Single Chip-Edge_Cuts.gbr  Single Chip-F_Cu.gbr  Single Chip-F_Mask.gbr  Single Chip-F_Paste.gbr  Single Chip-F_SilkS.gbr  Single Chip-F_Silkscreen.gbr  Single Chip-NPTH.drl  Single Chip-PTH.drl
code/new_bios/modified_v40/: disc.asm  pcxtbios.asm  pcxtbios.lst
code/v20/: CMakeLists.txt  cga.cpp  cga.h  drives.cpp  drives.h  keycodes.h  pcxtbios.rom  pi86  pi86.cpp  timer.cpp  vga.cpp  vga.h  x86.cpp  x86.h
code/v20/asm/: int09.asm  int13.asm
code/v30/: bios  bios.asm  cga.h  drives.cpp  floppy.img  font.h  keycodes.h  pi86  pi86.cpp  timer.h  vga.cpp  x86.cpp  x86.h
code/v30/asm/: int10.asm  int13.asm
